<resources>
    <string name="app_name">AppMed</string>
    <string name="doctors_nearby">Врачи\nрядом</string>
    <string name="doctors_name">85% пациентов рекомендуют\nэтого врача рядом</string>
    <string name="my_directions">Мои\nназначения</string>

    <string name="add_meds_by_recipe">Препарат\nпо рецепту</string>
    <string name="add_help_in_search">Помощь\nв подборе</string>
    <string name="add_drugstore">Аптеки</string>
    <string name="add_smth_else">Что-то\nеще</string>

    <string name="alert_doctors">Узнайте мнение врача\nпо этому вопросу</string>
    <string name="alert_title">У меня аллергия на %1s</string>
    <string name="alert_drug_title">%1s содержит %2s</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>

    <string name="dose_open">Уточнить дозировку</string>
    <string name="dose_mg">%1$d мг</string>
    <plurals name="dose_count">
        <item quantity="zero">%1$d раз</item>
        <item quantity="one">%1$d раз</item>
        <item quantity="two">%1$d раза</item>
        <item quantity="few">%1$d раза</item>
        <item quantity="many">%1$d раз</item>
        <item quantity="other">%1$d раз</item>
    </plurals>
    <plurals name="dose_days">
        <item quantity="zero">%1$d дней</item>
        <item quantity="one">%1$d день</item>
        <item quantity="two">%1$d дня</item>
        <item quantity="few">%1$d дня</item>
        <item quantity="many">%1$d дней</item>
        <item quantity="other">%1$d дней</item>
    </plurals>

    <string name="product_availability">В наличии</string>
    <string name="product_recipe">По рецепту</string>
    <string name="product_title">%1s, %2s</string>
    <string name="product_currency">%1d ₽</string>

    <string name="dose_profile_who">Кто будет принимать?</string>
    <string name="dose_product_recipe">Только по рецепту</string>
    <string name="dose_i_have_recipe">У меня есть рецепт</string>
    <string name="dose_get_direction">Получить назначение врача</string>
    <string name="dose_why_antibio">Почему самому нельзя подобрать антибиотик?</string>
    <string name="dose">Дозировка</string>
    <string name="freq">Частота</string>
    <string name="course">Курс</string>

    <string name="dose_subscr">Подписка</string>
    <string name="dose_reminders">Вкл. напоминания приема</string>
    <string name="dose_save">Сохранить</string>


    <string name="profile_insert_name">Введите имя</string>
    <string name="profile_age">Возраст</string>
    <string name="profile_sex">Пол</string>
    <string name="profile_pregnant">Беременность</string>
    <string name="profile_age_hint">40</string>
    <string name="profile_sex_hint">Ж</string>
    <string name="profile_save">Подобрать</string>

    <string name="direction_i_have">У меня есть рецепт</string>
    <string name="direction_take">Получить назначение врача</string>
    <string name="direction_clinics">В клинике</string>
    <string name="direction_online">Онлайн</string>
    <string name="direction_home">На дому</string>

    <string name="fake_doctor">Врач Лазарев А.П.</string>
    <string name="fake_text">В 1928 году Александр Флеминг проводил рядовой эксперимент в ходе многолетнего исследования, посвященного изучению борьбы человеческого организма с бактериальными инфекциями. Вырастив колонии культуры Staphylococcus, он обнаружил, что некоторые из чашек для культивирования заражены обыкновенной плесенью Penicillium — веществом, из-за которого хлеб при долгом лежании становится зеленым. Вокруг каждого пятна плесени Флеминг заметил область, в которой бактерий не было. Из этого он сделал вывод, что плесень вырабатывает вещество, убивающее бактерии. В последствии он выделил молекулу, ныне известную как «пенициллин». Это и был первый современный антибиотик.</string>
</resources>