<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clipChildren="false"
    android:clipToPadding="false"
    android:minHeight="@dimen/base_advice_height"
    android:orientation="horizontal">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/alertItem"
        android:layout_width="0px"
        android:layout_height="match_parent"
        android:layout_marginStart="4dp"
        android:layout_weight="1"
        android:background="@drawable/button_ripple"
        android:clickable="true"
        android:elevation="@dimen/base_elevation"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/personal_item"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/alertTitle"
            style="@style/HeaderText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alert_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="RtlHardcoded" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonYes"
            style="@style/OutlineButton"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/yes"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/buttonNo"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonNo"
            style="@style/OutlineButton"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:text="@string/no"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/buttonYes" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/doctorsItem"
        android:layout_width="0px"
        android:layout_height="match_parent"
        android:layout_marginStart="4dp"
        android:layout_weight="1"
        android:background="@drawable/button_ripple"
        android:clickable="true"
        android:elevation="@dimen/base_elevation"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/personal_item"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/doctorsTitle"
            style="@style/HeaderText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alert_drug_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="RtlHardcoded" />

        <ImageView
            android:id="@+id/doctorImage"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginTop="4dp"
            android:src="@drawable/image_doctor"
            app:layout_constraintBottom_toTopOf="@id/doctorTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/doctorsTitle"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/doctorTitle"
            style="@style/SubtitleText"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:text="@string/alert_doctors"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="RtlHardcoded" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>