<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clipChildren="false"
    android:clipToPadding="false"
    android:paddingBottom="12dp"
    android:minHeight="@dimen/base_advice_height">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/doctorsItem"
        android:layout_width="0px"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_weight="1"
        android:background="@drawable/button_ripple"
        android:clickable="true"
        android:elevation="@dimen/base_elevation"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/recipeTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/doctorsTitle"
            style="@style/HeaderText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dose_why_antibio"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="RtlHardcoded" />

        <ImageView
            android:id="@+id/doctorImage"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginTop="4dp"
            android:src="@drawable/image_doctor"
            app:layout_constraintBottom_toTopOf="@id/doctorTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/doctorsTitle"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/doctorTitle"
            style="@style/TinyTextLight"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/alert_doctors"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="RtlHardcoded" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/recipeTitle"
        style="@style/HeaderText"
        android:layout_width="0px"
        android:layout_height="0px"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/button_ripple"
        android:clickable="true"
        android:elevation="@dimen/base_elevation"
        android:padding="8dp"
        android:text="@string/dose_i_have_recipe"
        app:layout_constraintBottom_toTopOf="@id/directionTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/doctorsItem"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/directionTitle"
        style="@style/HeaderText"
        android:layout_width="0px"
        android:layout_height="0px"
        android:layout_marginStart="8dp"
        android:background="@drawable/button_ripple"
        android:clickable="true"
        android:elevation="@dimen/base_elevation"
        android:padding="8dp"
        android:text="@string/dose_get_direction"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/doctorsItem"
        app:layout_constraintTop_toBottomOf="@id/recipeTitle" />
</androidx.constraintlayout.widget.ConstraintLayout>