<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="28dp"
    android:clipChildren="false"
    android:clipToPadding="false">

    <TextView
        android:id="@+id/subscrText"
        style="@style/NormalTextLight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawablePadding="20dp"
        android:text="@string/dose_subscr"
        app:drawableRightCompat="@drawable/ic_question"
        app:drawableTint="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/subscrSwitch"
        android:layout_width="wrap_content"
        android:layout_height="0px"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="@id/subscrText"
        app:layout_constraintEnd_toStartOf="@id/subscrText"
        app:layout_constraintTop_toTopOf="@id/subscrText" />

    <TextView
        android:id="@+id/reminderText"
        style="@style/NormalTextLight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:drawablePadding="20dp"
        android:text="@string/dose_reminders"
        app:drawableRightCompat="@drawable/ic_question"
        app:drawableTint="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/subscrText" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/reminderSwitch"
        android:layout_width="wrap_content"
        android:layout_height="0px"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="@id/reminderText"
        app:layout_constraintEnd_toStartOf="@id/reminderText"
        app:layout_constraintTop_toTopOf="@id/reminderText" />

    <ImageView
        android:id="@+id/stub"
        android:layout_width="0px"
        android:layout_height="0px"
        android:layout_marginTop="10dp"
        android:adjustViewBounds="true"
        android:background="@drawable/img_calendar"
        android:scaleType="fitXY"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/button"
        app:layout_constraintDimensionRatio="714:620"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/reminderText" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button"
        style="@style/FilledButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/profile_save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/stub"
        app:layout_constraintVertical_bias="1.0" />
</androidx.constraintlayout.widget.ConstraintLayout>